extensions/basic_auth/config/storage-cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: google-storage
  namespace: istio-system
spec:
  configPatches:
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value:
        name: google-storage
        dns_lookup_family: V4_ONLY
        type: STRICT_DNS
        connect_timeout: 5s
        transport_socket:
          name: envoy.transport_sockets.tls
        load_assignment:
          cluster_name: google-storage
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: storage.googleapis.com
                    port_value: 443
